upgrade TwelveMonkeys